# segnn-jax

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  requirements.txt  setup.cfg  validate.py
.github/workflows/: build_branch.yaml
experiments/: __init__.py  requirements.txt  train.py
experiments/nbody/: README.md  dataset_nbody.py  datasets.py  nbody_datasets.py  train.py  train_nbody.py  utils.py
experiments/nbody/data/: generate_dataset.py  synthetic_sim.py
experiments/nbody/dataset/: charges_test_charged5_initvel1small.npy  charges_train_charged5_initvel1small.npy.REMOVED.git-id  charges_valid_charged5_initvel1small.npy  edges_test_charged5_initvel1small.npy  edges_train_charged5_initvel1small.npy.REMOVED.git-id  edges_valid_charged5_initvel1small.npy  generate_dataset.py  loc_test_charged5_initvel1small.npy.REMOVED.git-id  loc_train_charged5_initvel1small.npy.REMOVED.git-id  loc_valid_charged5_initvel1small.npy.REMOVED.git-id  vel_test_charged5_initvel1small.npy.REMOVED.git-id  vel_train_charged5_initvel1small.npy.REMOVED.git-id  vel_valid_charged5_initvel1small.npy.REMOVED.git-id
experiments/qm9/: README.md  dataset.py  train.py  utils.py
segnn/: __init__.py  blocks.py  graph_utils.py  graphs.py  segnn.py
segnn_jax/: __init__.py  blocks.py  config.py  graph_utils.py  irreps_computer.py  segnn.py
tests/: conftest.py  test_blocks.py  test_segnn.py
