[metadata]
name = segnn_jax
version = attr: segnn_jax.__version__
author = Gianluca Galletti
author_email = g.galletti@tum.de
description = Steerable E(3) GNN in jax
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8


[options]
packages = segnn_jax
python_requires = >=3.8
install_requires =
    dm_haiku>=0.0.9
    e3nn_jax>=0.17.4
    jax
    jaxlib
    jraph==0.0.6.dev0
    numpy>=1.23.4
    optax==0.1.3
